[package]
name = "evolutionarySim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
rand = "0.8.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
memory-stats = "1.1.0"
rand_distr = "0.4.3"
ahash = { version = "0.8.11", feautures = ["nightly"] }
atomic = "0.6.0"


